# acs

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
acs/: __init__.py  __main__.py  acs_api.py  apply.py  cli.py  common.py  config.py  http_client.py  purge_exceptions.py  rhsda_check.py
config/: example.env
scripts/: platform-fp-check.sh
scripts/lib/: acs-api.sh  common.sh  fp-apply.sh  rhsda-check.sh  rhsda.sh
tests/: test_apply.py  test_purge_exceptions.py  test_rhsda_client.py  test_rhsda_match.py
tests/fixtures/: CVE-2024-0874.json
